--- a/client/roadmap.html
+++ b/client/roadmap.html
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="cd-timeline-block">
-                        <div class="cd-timeline-img cd-picture"><img src="assets/pq-sertificates.png" alt="Location"></div>
+                        <div class="cd-timeline-img cd-picture"><img src="pq-sertificates.png" alt="Location"></div>
                         <div class="cd-timeline-content">
                             <h2>Ongoing Testing & Development</h2>
                             <p>Web Wallet + other GUI work</p>
@@ -157,7 +157,7 @@
                             <span class="cd-date"><h2>&#x2190; We Are Here</h2></span></div>
                     </div>
                     <div class="cd-timeline-block">
-                        <div class="cd-timeline-img cd-picture"><img src="assets/vulnerability.png" alt="Location"></div>
+                        <div class="cd-timeline-img cd-picture"><img src="vulnerability.png" alt="Location"></div>
                         <div class="cd-timeline-content">
                             <h2>Security Testing</h2>
                             <p>Bug Bounty Program</p>
