--- a/client/roadmap.html
+++ b/client/roadmap.html
@@ -128,10 +128,10 @@
                         </div>
                         <!-- cd-timeline-img -->
                         <div class="cd-timeline-content">
-                            <h2>Early access token presale</h2>
-                            <p>If hard cap not met then public ICO May 24th.</p>
-                            <p>Start of integration of Ephemeral messaging layer to enable end-end secure data channels</p>
-                            <span class="cd-date">May 2017</span>
+                             <h2>Funding targets achieved</h2>
+                             <p>Public ICO no longer required</p>
+                             <p>Start of integration of Ephemeral messaging layer to enable end-end secure data channels</p>
+                             <span class="cd-date">May 2017</span>
                         </div>
                     </div>
                     <!-- cd-timeline-block -->
@@ -150,7 +150,7 @@
                     <div class="cd-timeline-block">
                         <div class="cd-timeline-img cd-picture"><img src="pq-sertificates.png" alt="Location"></div>
                         <div class="cd-timeline-content">
-                            <h2>Ongoing Testing & Development</h2>
+                            <h2>Ongoing Testing &amp; Development</h2>
                             <p>Web Wallet + other GUI work</p>
                             <p>Further Optimizations</p>
                             <p>Preparing for security testnet</p>
