Some new team members…

--- a/client/team.html
+++ b/client/team.html
@@ -98,6 +98,84 @@
                         </div>
                     </div>
                 </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="juan.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Juan Leni</div>
+                                <div class="meta"><a class="group">Senior Consultant</a></div>
+                                <div class="description">Lead Architect
+                                    <br><a href="https://keybase.io/jleni"><code>keybase id jleni</code></a></div>
+                            </div>
+                        </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="scott.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Scott Donald</div>
+                                <div class="meta"><a class="group">Core Developer</a></div>
+                                <div class="description">Full stack developer
+                                    <br><a href="https://keybase.io/scottdonald"><code>keybase id scottdonald</code></a></div>
+                            </div>
+                        </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="adam.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Adam Koltun</div>
+                                <div class="meta"><a class="group">Marketing &amp; Community</a></div>
+                                <div class="description">&nbsp;
+                                    <br><a href="https://keybase.io/alkoltun"><code>keybase id alkoltun</code></a></div>
+                            </div>
+                        </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="jack.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Jack Matier</div>
+                                <div class="meta"><a class="group">Marketing &amp; Community</a></div>
+                                <div class="description">&nbsp;
+                                    <br><a href="https://keybase.io/jackalyst"><code>keybase id jackalyst</code></a></div>
+                            </div>
+                        </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="elliott.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Elliott Gregory Dehnbostel</div>
+                                <div class="meta"><a class="group">Marketing &amp; Community</a></div>
+                                <div class="description">&nbsp;
+                                    <br><a href="https://keybase.io/elliottdehn"><code>keybase id elliottdehn</code></a></div>
+                            </div>
+                        </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="andrew.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Andrew Chiw</div>
+                                <div class="meta"><a class="group">Developer</a></div>
+                                <div class="description">Node Development
+                                    <br><a href="https://keybase.io/randomshinichi"><code>keybase id randomshinichi</code></a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ui inverted vertical footer segment">
+                    <div class="ui container">
+                        <div class="ui stackable inverted divided equal height stackable grid">
+                            <div class="seven wide column">
+                                <h4 class="ui inverted header">&copy; The QRL 2017</h4>
+                                <p>Questions? <a href="mailto:info@theqrl.org">info@theQRL.org</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
               </div>
               <div class="teampage"></div>
             </div>
