--- a/client/team.html
+++ b/client/team.html
@@ -164,6 +164,17 @@
                                     <br><a href="https://keybase.io/randomshinichi"><code>keybase id randomshinichi</code></a></div>
                             </div>
                         </div>
+                        <div class="ui card">
+                            <div>
+                                <p align="center"><img src="aidan.png" style="max-width: 150px"></p>
+                            </div>
+                            <div class="content">
+                                <div class="header">Aidan Beale</div>
+                                <div class="meta"><a class="group">Developer</a></div>
+                                <div class="description">Node GUI
+                                    <br><a href="https://keybase.io/aidanb"><code>keybase id aidanb</code></a></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="ui inverted vertical footer segment">
